src/objects/ResourceAbsence.object
<CustomObject>
    <fields>
        <fullName>FSL__EstTravelTimeFrom__c</fullName>
        <label>Estimated Travel Time From</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__EstTravelTime__c</fullName>
        <label>Estimated Travel Time</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__EstimatedTravelDistanceFrom__c</fullName>
        <label>Estimated Travel Distance From</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__EstimatedTravelDistanceTo__c</fullName>
        <label>Estimated Travel Distance To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__GanttLabel__c</fullName>
        <label>Gantt Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Gantt_Color__c</fullName>
        <label>Gantt Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__InternalSLRGeolocation__c</fullName>
        <label>Internal SLR Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <recordTypes>
        <fullName>FSL__Break</fullName>
        <active>true</active>
        <label>Break</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSL__Non_Availability</fullName>
        <active>true</active>
        <label>Non Availability</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FSL__startShouldPrecedeEnd</fullName>
        <active>true</active>
        <errorConditionFormula>End &lt;=  Start</errorConditionFormula>
        <errorDisplayField>Start</errorDisplayField>
        <errorMessage>The Start Time must be earlier than the End Time.</errorMessage>
    </validationRules>
</CustomObject>